[gd_scene load_steps=16 format=3 uid="uid://0ke3upru7noy"]

[ext_resource type="Script" path="res://mob.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bi4mkukdhfws5" path="res://art/mob/mob1_spritesheet.png" id="2"]
[ext_resource type="Texture2D" uid="uid://swifahjqdls4" path="res://projectiles/particle2.png" id="3"]

[sub_resource type="CapsuleShape2D" id="8"]

[sub_resource type="TileSet" id="2"]

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="4"]
resource_name = "mob_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="5"]
resource_name = "mob_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="6"]
resource_name = "mob_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="7"]
resource_name = "mob_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb3kj"]
_data = {
"RESET": SubResource("3"),
"mob_down": SubResource("4"),
"mob_left": SubResource("5"),
"mob_right": SubResource("6"),
"mob_up": SubResource("7")
}

[sub_resource type="ParticleProcessMaterial" id="9"]
emission_shape = 5
emission_point_count = 1
gravity = Vector3(100, 0, 0)

[sub_resource type="Animation" id="10"]
length = 0.001

[sub_resource type="Animation" id="11"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csyb8"]
_data = {
"RESET": SubResource("10"),
"dead": SubResource("11")
}

[node name="mob" type="CharacterBody2D" groups=["charge_mob"]]
collision_mask = 9
script = ExtResource("1")

[node name="col" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 250)
scale = Vector2(15, 15)
shape = SubResource("8")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("2")
format = 2

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2")
hframes = 8
vframes = 2
frame = 1

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bb3kj")
}

[node name="pars" type="GPUParticles2D" parent="."]
position = Vector2(-100, 300)
emitting = false
amount = 50
process_material = SubResource("9")
texture = ExtResource("3")
lifetime = 3.0
one_shot = true

[node name="deadanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_csyb8")
}

[node name="vis" type="VisibleOnScreenNotifier2D" parent="."]

[node name="deathTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="animation_finished" from="deadanim" to="." method="_on_deadanim_animation_finished"]
[connection signal="screen_entered" from="vis" to="." method="_on_vis_screen_entered"]
[connection signal="screen_exited" from="vis" to="." method="_on_vis_screen_exited"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
